--- a/.gitignore
+++ b/.gitignore
@@ -1,22 +1,20 @@
-*.gem
-*.rbc
-.bundle
-.config
-.yardoc
+/.bundle/
+/.yardoc
+/_yardoc/
+/coverage/
+/doc/
+/pkg/
+/spec/reports/
+/tmp/
+
+# rspec failure tracking
+.rspec_status
+
+
+# runtime
+.env
+tmp-result-*.json
 Gemfile.lock
-InstalledFiles
-_yardoc
-coverage
-doc/
-lib/bundler/man
-pkg
-rdoc
-spec/reports
-test/tmp
-test/version_tmp
-tmp
-*.bundle
-*.so
-*.o
-*.a
-mkmf.log
+
+# IDE
+.idea/
